<resources>
    <string name="app_name">Attandance QR</string>
    <string name="no_internet">No Internet connection.</string>

    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="userId">Mobile Number</string>
    <string name="login">Login</string>
    <string name="qrd">QR Digital Attendance</string>
    <string name="empty_field">field is Empty</string>
    <string name="try_again">Check your internet connection, After try again.</string>
    <string name="check_connection">Check your internet connection..</string>
    <string name="attendance_history">Attendance History</string>
    <string name="udf_code">Emp Code:</string>
    <string name="nameUser">Name:</string>
    <string name="in_time">In Time:</string>
    <string name="out_time">Out Time:</string>
    <string name="in_location">In Location</string>
    <string name="out_location">Out Location</string>
    <string name="not_at_location">Bad QR code OR Incorrect location. Try again.</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email_address">Email Address:</string>
    <string name="weekOff">Your week off is not define</string>
    <string name="week_off">Week Off:</string>
    <string name="reset_week_off">Reset Week Off</string>
    <string name="mark_week_off">Mark Week off</string>
    <string name="select_week_of">Please select week Off</string>
    <string name="select_pvc">Please select Date</string>
    <string name="set_week_of">Week Off updated successfully</string>
    <string name="police_verification_date">Police Verification Certificate Date:</string>
    <string name="reset_pvc_expiry_date">Reset PVC Expiry Date</string>
    <string name="police_verification">Police verification validity date</string>
    <string name="select_date">select Date</string>
    <string name="update">Update</string>
    <string name="not_found">User not Found</string>
    <string name="pvc">Your police verification is not complete</string>
    <string name="employee_id">Employee ID:</string>
    <string name="week_select">---Select week off day---</string>
    <string name="no_attendance_data_found">No attendance data found.</string>
    <string name="cameraimage">Camera Flash Image</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="in_time_marked">IN-TIME marked.</string>
    <string name="out_time_marked">OUT-TIME marked.</string>

    <string-array name="weekOff">
        <item>---Select week off day---</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

</resources>