<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewUsmart"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/humankind_logo"
        app:layout_constraintEnd_toEndOf="@+id/eUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/eUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eUsername"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:autofillHints="text"
        android:background="@drawable/edit_background_line_drawable"
        android:hint="@string/userId"
        android:inputType="number"
        android:maxLength="10"
        android:padding="12dp"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="240dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background_drawable"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eUsername" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qrd"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewUsmart"
        app:layout_constraintStart_toStartOf="@+id/imageViewUsmart"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUsmart" />

    <TextView
        android:id="@+id/txtAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>