<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileActivity">

    <TextView
        android:id="@+id/profilePage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#AAF3F3F3"
        app:layout_constraintStart_toStartOf="@id/profilePage"
        app:layout_constraintEnd_toEndOf="@id/profilePage"
        app:layout_constraintTop_toBottomOf="@id/profilePage"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toTopOf="@id/txtAppVersion">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtName"
                app:layout_constraintEnd_toEndOf="@id/txtName"
                app:layout_constraintTop_toBottomOf="@id/txtName"/>

            <View
                android:id="@+id/viewName"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtNameValue"
                app:layout_constraintStart_toStartOf="@id/txtNameValue"
                app:layout_constraintEnd_toEndOf="@id/txtNameValue"/>

            <TextView
                android:id="@+id/txtEmpCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/udf_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewName"/>

            <TextView
                android:id="@+id/txtEmpCodeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtEmpCode"
                app:layout_constraintEnd_toEndOf="@id/txtEmpCode"
                app:layout_constraintTop_toBottomOf="@id/txtEmpCode"/>

            <View
                android:id="@+id/viewEmpCode"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtEmpCodeValue"
                app:layout_constraintStart_toStartOf="@id/txtEmpCodeValue"
                app:layout_constraintEnd_toEndOf="@id/txtEmpCodeValue"/>

            <TextView
                android:id="@+id/txtPhoneNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewEmpCode"/>

            <TextView
                android:id="@+id/txtPhoneNoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtPhoneNo"
                app:layout_constraintEnd_toEndOf="@id/txtPhoneNo"
                app:layout_constraintTop_toBottomOf="@id/txtPhoneNo"/>

            <View
                android:id="@+id/viewPhoneNo"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtPhoneNoValue"
                app:layout_constraintStart_toStartOf="@id/txtPhoneNoValue"
                app:layout_constraintEnd_toEndOf="@id/txtPhoneNoValue"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPhoneNo"/>

            <TextView
                android:id="@+id/txtEmailValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtEmail"
                app:layout_constraintEnd_toEndOf="@id/txtEmail"
                app:layout_constraintTop_toBottomOf="@id/txtEmail"/>

            <View
                android:id="@+id/viewEmail"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtEmailValue"
                app:layout_constraintStart_toStartOf="@id/txtEmailValue"
                app:layout_constraintEnd_toEndOf="@id/txtEmailValue"/>

            <TextView
                android:id="@+id/txtInTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/in_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewEmail"/>

            <TextView
                android:id="@+id/txtInTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtInTime"
                app:layout_constraintEnd_toEndOf="@id/txtInTime"
                app:layout_constraintTop_toBottomOf="@id/txtInTime"/>

            <View
                android:id="@+id/viewInTime"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtInTimeValue"
                app:layout_constraintStart_toStartOf="@id/txtInTimeValue"
                app:layout_constraintEnd_toEndOf="@id/txtInTimeValue"/>

            <TextView
                android:id="@+id/txtWeekOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/week_off"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewInTime"/>

            <TextView
                android:id="@+id/txtWeekOffValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtWeekOff"
                app:layout_constraintEnd_toEndOf="@id/txtWeekOff"
                app:layout_constraintTop_toBottomOf="@id/txtWeekOff"/>

            <View
                android:id="@+id/viewWeekOff"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtWeekOffValue"
                app:layout_constraintStart_toStartOf="@id/txtWeekOffValue"
                app:layout_constraintEnd_toEndOf="@id/txtWeekOffValue"/>


            <TextView
                android:id="@+id/btnWeekOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_week_off"
                android:textColor="@color/white"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/button_background_drawable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewWeekOff"/>

            <View
                android:id="@+id/viewPVCLine"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/btnWeekOff"
                app:layout_constraintStart_toStartOf="@id/txtPVCValue"
                app:layout_constraintEnd_toEndOf="@id/txtPVCValue"/>

            <TextView
                android:id="@+id/txtPVC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/police_verification_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPVCLine"/>

            <TextView
                android:id="@+id/txtPVCValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="@id/txtWeekOff"
                app:layout_constraintEnd_toEndOf="@id/txtWeekOff"
                app:layout_constraintTop_toBottomOf="@id/txtPVC"/>

            <View
                android:id="@+id/viewPVC"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="#AAF3F3F3"
                app:layout_constraintTop_toBottomOf="@id/txtPVCValue"
                app:layout_constraintStart_toStartOf="@id/txtPVCValue"
                app:layout_constraintEnd_toEndOf="@id/txtPVCValue"/>

            <TextView
                android:id="@+id/btnPVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_pvc_expiry_date"
                android:textColor="@color/white"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/button_background_drawable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPVCValue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txtAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>