<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:visibility="gone"
                android:id="@+id/textViewshift"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:padding="10dp"
                android:text="shift"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewInTime"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:text="@string/in_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/textViewInTimeShow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llDate" />

        <TextView
            android:id="@+id/textViewInTimeShow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewInTime"
            app:layout_constraintTop_toTopOf="@id/textViewInTime" />

        <TextView
            android:id="@+id/textViewInLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:text="@string/in_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/textViewInLocationShow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewInTime" />

        <TextView
            android:id="@+id/textViewInLocationShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/textViewInLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewInLocation"
            app:layout_constraintTop_toTopOf="@id/textViewInLocation" />

        <TextView
            android:id="@+id/textViewOutTime"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:text="@string/out_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/textViewOutTimeShow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewInLocation" />

        <TextView
            android:id="@+id/textViewOutTimeShow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewOutTime"
            app:layout_constraintTop_toTopOf="@id/textViewOutTime" />

        <TextView
            android:id="@+id/textViewOutLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/out_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewOutLocationShow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewOutTime" />

        <TextView
            android:id="@+id/textViewOutLocationShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/textViewOutLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewOutLocation"
            app:layout_constraintTop_toTopOf="@id/textViewOutLocation" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>